# simply-db

./: Cargo.toml  README.md
.github/workflows/: test_passage.yml
benches/: 0_bench_cmp.rs  1_tokenizer.rs  2_expr_parsing.rs  3_query_parsing.rs
net/: Cargo.toml
net/src/: lib.rs  objects.rs  requests.rs
parser/: Cargo.toml
parser/benches/: 0_bench_cmp.rs  1_tokenizer.rs  2_expr_parsing.rs  3_query_parsing.rs
parser/src/: common.rs  lib.rs  tokenizer.rs
parser/src/queries/: create_table_tests.rs  expr.rs  expr_tests.rs  insert_tests.rs  mod.rs  query.rs  select_tests.rs  update_tests.rs
query/: Cargo.toml
query/benches/: 0_insert.rs  1_select.rs  2_update.rs  MOCK_DATA.csv  formatter.rs  setup.rs
query/src/: context.rs  expr.rs  lib.rs  query.rs
query/src/queries/: create_table.rs  delete.rs  insert.rs  select.rs  select_tests.rs  update.rs
src/: common_types.rs  db.rs  lib.rs
src/queries/: create_table.rs  delete.rs  insert.rs  mod.rs  select.rs  select_tests.rs  update.rs
src/sql/: expr.rs  mod.rs  query.rs
src/sql/parser/: common.rs  create_table_tests.rs  expr.rs  expr_tests.rs  insert_tests.rs  mod.rs  query.rs  select_tests.rs  tokenizer.rs  update_tests.rs
storage/: Cargo.toml
storage/src/: common_types.rs  db.rs  lib.rs  row.rs  schema.rs  table.rs
structures/: Cargo.toml
structures/src/: lib.rs
tests/: requests.rs  server_init.rs  test_simple.rs
