[package]
name = "simply-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace]
resolver = "3"
members = ["parser/", "query/", "storage/"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
boa_engine = { version = "0.21.1" }
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = { version = "0.26.1" }


[[bin]]
name = "server"
path = "src/bin/server/server.rs"
required-features = ["server-deps"]

[[bin]]
name = "client"
path = "src/bin/client/client.rs"
required-features = ["client-deps"]

[dependencies]
storage = {path = "storage/"}
parser = {path = "parser/"}
query = {path = "query/"}
serde = {workspace = true}
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"], optional = true }
chrono = { version = "0.4.45", default-features = false, features = ["clock"], optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
dotenv = { version = "0.15.0", optional = true }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "color"], optional = true }
iced = { version = "0.14.0", features = ["advanced"], optional = true }
log = "0.4"
reqwest = { version = "0.11", features = ["json"], optional = true }
serde_json = { version = "1.0.115", default-features = false, features = ["alloc"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

[features]
default = ["client-deps", "server-deps"]
client-deps = ["env_logger", "iced", "reqwest", "serialize", "tokio"]
serialize = ["serde_json", "storage/serialize","query/serialize"]
server-deps = ["axum", "chrono", "clap", "dotenv", "env_logger", "serialize", "tokio"]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
