[package]
name = "simply-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace]
resolver = "3"
members = ["net", "parser/", "query/", "storage/", "structures/"]

[workspace.dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "macros", "tokio"] }
boa_engine = { version = "0.21.1" }
criterion = { version = "0.5.1", features = ["html_reports"] }
csv = "1.4.0"
rstest = { version = "0.26.1" }
serde = { version = "1.0.219", features = ["serde_derive"] }

[[bin]]
name = "server"
path = "src/bin/server/server.rs"
required-features = ["server-deps"]

[[bin]]
name = "client"
path = "src/bin/client/client.rs"
required-features = ["client-deps"]

[dependencies]
axum = { workspace = true, optional = true }
chrono = { version = "0.4.45", default-features = false, features = ["clock"], optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
dotenv = { version = "0.15.0", optional = true }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "color"], optional = true }
iced = { version = "0.14.0", features = ["advanced"], optional = true }
log = "0.4"
net = { path = "net/" }
parser = { path = "parser/" }
query = { path = "query/" }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { workspace = true }
serde_json = { version = "1.0.115", default-features = false, features = ["alloc"], optional = true }
stats_alloc = { version = "0.1.10", optional = true }
storage = { path = "storage/" }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
# We need those for integration tests
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
# default = ["client-deps", "server-deps"]
client-deps = ["env_logger", "iced", "reqwest", "serialize", "tokio"]
serialize = ["query/serialize", "serde_json", "storage/serialize"]
server-deps = ["axum", "chrono", "clap", "dotenv", "env_logger", "net/server", "serialize", "stats_alloc", "tokio"]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
