[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[[bench]]
harness = false
name = "3_query_parsing"

[[bench]]
harness = false
name = "2_expr_parsing"

[[bench]]
harness = false
name = "1_tokenizer"

[[bench]]
harness = false
name = "0_bench_cmp"

[dependencies]
foldhash = "0.2.0"
query = { path = "../query/" }
storage = { path = "../storage/" }
structures = { path = "../structures/" }

[dev-dependencies]
boa_engine = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
